--- a/scss/_product-hero.scss
+++ b/scss/_product-hero.scss
@@ -18,10 +18,15 @@
 
 .jmproduct--hero-temp {
     margin-bottom: 70px;
+    margin-top: 70px;
     img {
         width: 100%;
         height: 100%;
         object-fit: cover;
+    }
+    .product_hero__heading{
+        margin-bottom: 40px;
+        @include generateFont($jmMediumFont, 36px, 40px, $jmDarkCharcoalColor);
     }
 	.product_hero__para {
         @include generateFont($jmFont, 18px, 28px);
